@@ -202,7 +202,9 @@ extern int ExternalRead( int h, char *pch, int cch ) {
 
     char *p = pch, *pEnd;
     int n;
+#ifndef WIN32
     psighandler sh;
+#endif
     
     while( cch ) {
 	if( fAction )
@@ -211,9 +213,15 @@ extern int ExternalRead( int h, char *pch, int cch ) {
 	if( fInterrupt )
 	    return -1;
 
+#ifndef WIN32
 	PortableSignal( SIGPIPE, SIG_IGN, &sh, FALSE );
+#endif
+
 	n = read( h, p, cch );
+
+#ifndef WIN32
 	PortableSignalRestore( SIGPIPE, &sh );
+#endif
 	
 	if( !n ) {
 	    outputl( _("External connection closed.") );
@@ -249,7 +257,9 @@ extern int ExternalWrite( int h, char *pch, int cch ) {
 
     char *p = pch;
     int n;
+#ifndef WIN32
     psighandler sh;
+#endif
 
     while( cch ) {
 	if( fAction )
@@ -258,9 +268,15 @@ extern int ExternalWrite( int h, char *pch, int cch ) {
 	if( fInterrupt )
 	    return -1;
 
+#ifndef WIN32
 	PortableSignal( SIGPIPE, SIG_IGN, &sh, FALSE );
+#endif
+
 	n = write( h, p, cch );
+
+#ifndef WIN32
 	PortableSignalRestore( SIGPIPE, &sh );
+#endif
 	
 	if( !n )
 	    return 0;
